--- a/css/ew-styles-presentation.css
+++ b/css/ew-styles-presentation.css
@@ -26,7 +26,15 @@
 }
 
 .bd-aside .btn {
-	color: #6F7285 !important;
+	color: #232533 !important;
+	font-size: 1.1em;
+	font-weight: 400 !important;
+}
+
+.bd-aside a {
+	color: #232533 !important;
+	font-size: 1.1em;
+	font-weight: 400;
 }
 
 .bd-aside a:hover,
@@ -34,7 +42,7 @@
 .bd-aside .btn:hover,
 .bd-aside .btn:focus {
 	box-shadow: 0 0 0 1px rgba(255, 255, 255, .7) !important;
-	background-color: #fff !important;
+	background-color: #fff !important; 
 }
 
 .bd-aside .btn::before {
